Fixed result tab alignment on home page on wider screens

--- a/src/app/component/result-tab/result-tab.component.scss
+++ b/src/app/component/result-tab/result-tab.component.scss
@@ -5,6 +5,11 @@
 // # :author: CSC - IT Center for Science Ltd., Espoo Finland servicedesk@csc.fi
 // # :license: MIT
 
+.wrapper {
+    max-width: 1440px;
+    margin: auto;
+}
+
 .scroll {
     display: flex;
     flex-wrap: nowrap;
